<?xml version="1.0" encoding="utf-8"?>

<!-- 

 From sdk r17 and up its possible to do:
 
 xmlns:picker="http://schemas.android.com/apk/res-auto"
 
 instead of 
 
 xmlns:picker="http://schemas.android.com/apk/res/dk.itu.alphatrainer"

 This is required for the **numberpicker**
 
 -->
<PreferenceScreen 
    xmlns:picker="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    
    <ListPreference
        android:key="@string/key_pref_feedback_ui_type"
        android:title="@string/pref_feedback_ui_type"
        android:dialogTitle="@string/pref_feedback_ui_type"
        android:entries="@array/pref_feedback_ui_types_entries"
        android:entryValues="@array/pref_feedback_ui_types_values"
        android:defaultValue="@string/default_feedback_ui" />    
 
</PreferenceScreen>
