<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ViewGroupRoot.PaddedHorizontal.PaddedVertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    
    <!-- 
    
    LinearLayout containing day label + day score
    
    LinearLayout holding week label + week score + separator + month label + month score
    
    Use weight and gravity to place elements
    
     -->
    
    
    <LinearLayout
        android:id="@+id/layout_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true" >
    
	    <TextView
	        android:id="@+id/txt_label_day"
	        style="@style/Text.History.Label"
	        android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="1.7"
	        android:text="@string/label_day" />
	    
	    <TextView
	        android:id="@+id/txt_performance_day"
	        style="@style/Text.History.Performance.Day"
	        android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="1" />
    
    </LinearLayout>
    
    
    <LinearLayout
        android:id="@+id/layout_week_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_below="@id/layout_day" >
    
	    <TextView
	        android:id="@+id/txt_label_week"
	        style="@style/Text.History.Label"
	        android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="1.2"
	        android:text="@string/label_week" />
	    
	    <TextView
	        android:id="@+id/txt_performance_week"
	        style="@style/Text.History.Performance.WeekMonth"
	        android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="1" />
	    
	    
	    <TextView
	        android:id="@+id/txt_label_month"
	        style="@style/Text.History.Label"
	        android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="1.2"
	        android:text="@string/label_month" />
	    
	    <TextView
	        android:id="@+id/txt_performance_month"
	        style="@style/Text.History.Performance.WeekMonth"
	        android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="1" />
    
    </LinearLayout>
    
    
    
    <TextView 
        android:id="@+id/plot_description_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:layout_below="@id/layout_week_month"
        android:text="@string/feedback_plot_description" />
    
    
    <com.androidplot.xy.XYPlot
        android:id="@+id/plot_feedback"
        style="@style/Text.History.PlotDescription"
        android:layout_width="fill_parent"
        android:layout_height="110dp"
        android:layout_marginTop="0dp"
        android:layout_below="@id/plot_description_feedback" />
    
    
    
    <TextView 
        android:id="@+id/plot_description_baseline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:layout_below="@id/plot_feedback"
        android:text="@string/baseline_plot_description" />
    
    
    <com.androidplot.xy.XYPlot
        android:id="@+id/plot_baseline"
        style="@style/Text.History.PlotDescription"
        android:layout_width="fill_parent"
        android:layout_height="110dp"
        android:layout_marginTop="0dp"
        android:layout_below="@id/plot_description_baseline" />
    
    
    
    
    <!-- FOR MANUAL MODE -->
    
    <View
        android:id="@+id/anchor"
        android:layout_centerHorizontal="true"
        android:layout_width="14dp"
        android:layout_height="1dp"/>
    
    <Button 
        android:id="@+id/btn_recordings"
        style="@style/Button.Navigation"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/anchor"
        android:text="@string/btn_recordings" />
    
    <Button 
        android:id="@+id/btn_recordings_all"
        style="@style/Button.Navigation"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/anchor"
        android:text="@string/btn_recordings_all" />

</RelativeLayout>
